--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -128,7 +128,7 @@
   <div class="cursor-follower"></div>
 
   <nav class="navbar">
-    <div class="nav-logo"><span>~/</span>randi.dev</div>
+    <div class="nav-logo"><strong>RFT</strong>.dev</div>
     <ul class="nav-links">
       <li><a href="../index.html">Home</a></li>
       <li><a href="blog.html">Blog</a></li>
@@ -227,13 +227,14 @@
         </div>
         <div class="project-full-body">
           <p class="project-full-desc">
-            Platform informasi terintegrasi untuk mahasiswa — satu aplikasi untuk
-            jadwal kuliah, deadline tugas, dan resources akademik.
+            Platform berbagi cerita khusus mahasiswa — ruang di mana mahasiswa bisa
+            saling berbagi pengalaman, curhatan, dan informasi seputar perkuliahan
+            kepada sesama mahasiswa di kampus.
           </p>
           <div class="project-features">
-            <div class="feature-item">Jadwal kuliah terorganisir</div>
-            <div class="feature-item">Reminder deadline tugas</div>
-            <div class="feature-item">Catatan dan resources per mata kuliah</div>
+            <div class="feature-item">Posting cerita & curhatan perkuliahan</div>
+            <div class="feature-item">Baca cerita dari mahasiswa lain</div>
+            <div class="feature-item">Berbagi informasi penting seputar kampus</div>
           </div>
           <div class="project-tags" style="margin-bottom: 0.75rem;">
             <span class="project-tag">Flutter</span>
@@ -244,7 +245,36 @@
         </div>
       </div>
 
-      <!-- Project: Personal Portfolio (THIS website) -->
+      <!-- Project: Schedify -->
+      <div class="project-full-card reveal" data-category="mobile college">
+        <div class="project-full-header">
+          <div class="project-full-icon">📅</div>
+          <div class="project-full-meta">
+            <div class="project-full-title">Schedify</div>
+            <div class="project-full-type">MOBILE APP · FLUTTER</div>
+          </div>
+        </div>
+        <div class="project-full-body">
+          <p class="project-full-desc">
+            Aplikasi kalender sederhana untuk manajemen kegiatan harian.
+            Dirancang agar pengguna bisa mengatur jadwal dan mendapat pengingat
+            tepat waktu — kalender basic yang fungsional.
+          </p>
+          <div class="project-features">
+            <div class="feature-item">Tambah kegiatan di tanggal tertentu</div>
+            <div class="feature-item">Notifikasi otomatis sesuai jadwal</div>
+            <div class="feature-item">Tampilan kalender bulanan</div>
+          </div>
+          <div class="project-tags" style="margin-bottom: 0.75rem;">
+            <span class="project-tag">Flutter</span>
+            <span class="project-tag">Dart</span>
+            <span class="project-tag">Notifications</span>
+          </div>
+          <span class="project-status status-done"><span class="status-dot"></span>Completed</span>
+        </div>
+      </div>
+
+      <!-- Project: Personal Portfolio -->
       <div class="project-full-card reveal" data-category="web college">
         <div class="project-full-header">
           <div class="project-full-icon">🌐</div>
@@ -274,6 +304,39 @@
         </div>
       </div>
 
+
+      <!-- Project: Best In Battle -->
+      <div class="project-full-card reveal" data-category="web college">
+        <div class="project-full-header">
+          <div class="project-full-icon">🏆</div>
+          <div class="project-full-meta">
+            <div class="project-full-title">Best In Battle (BIB)</div>
+            <div class="project-full-type">WEB · PHP / MYSQL</div>
+          </div>
+        </div>
+        <div class="project-full-body">
+          <p class="project-full-desc">
+            Platform manajemen turnamen berbasis web yang bersifat generik — bisa digunakan
+            untuk olahraga, esports, kompetisi akademik, maupun kegiatan kompetitif lainnya.
+            Final Project matakuliah Web Programming.
+          </p>
+          <div class="project-features">
+            <div class="feature-item">Mode Bracket (Single Elimination) — scoring live per set</div>
+            <div class="feature-item">Mode Poin — papan skor digital real-time</div>
+            <div class="feature-item">Sistem role: Guest, Member, Organizer per-turnamen, Admin</div>
+            <div class="feature-item">Alur proposal turnamen: Member → Admin approval → Organizer</div>
+            <div class="feature-item">Generate & randomize bracket sebelum turnamen dimulai</div>
+          </div>
+          <div class="project-tags" style="margin-bottom: 0.75rem;">
+            <span class="project-tag">HTML</span>
+            <span class="project-tag">CSS</span>
+            <span class="project-tag">JavaScript</span>
+            <span class="project-tag">PHP</span>
+            <span class="project-tag">MySQL</span>
+          </div>
+          <span class="project-status status-wip"><span class="status-dot"></span>In Progress</span>
+        </div>
+      </div>
     </div>
   </div>
 
