--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,123 +7,95 @@
   <link rel="stylesheet" href="../css/style.css"/>
 </head>
 <body>
-
   <div class="cursor"></div>
   <div class="cursor-follower"></div>
 
   <nav class="navbar">
-    <div class="nav-logo"><span>~/</span>randi.dev</div>
+    <div class="nav-logo"><strong>RFT</strong>.dev</div>
     <ul class="nav-links">
       <li><a href="../index.html">Home</a></li>
       <li><a href="blog.html" class="active">Blog</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
-    <div class="nav-hamburger">
-      <span></span><span></span><span></span>
-    </div>
+    <div class="nav-hamburger"><span></span><span></span><span></span></div>
   </nav>
 
   <div class="page-header">
-    <p class="section-tag" style="display:inline-block; margin-bottom: 0.75rem;">// thoughts & notes</p>
-    <h1 class="section-title" style="font-size: clamp(2rem, 4vw, 3rem);">My <span style="color: var(--accent)">Blog</span></h1>
-    <p style="color: var(--text-secondary); margin-top: 1rem; font-size: 0.9rem; font-family: var(--font-mono);">
-      Catatan belajar, pengalaman, dan insight seputar tech & kuliah
-    </p>
+    <div class="page-header-inner">
+      <div class="page-eyebrow">02 — Thoughts & Notes</div>
+      <h1 class="page-title">My <span>Blog</span></h1>
+      <p class="page-subtitle">// Catatan belajar, pengalaman, dan insight seputar tech & kuliah</p>
+      <div class="page-divider"></div>
+    </div>
   </div>
 
-  <div class="section">
+  <div class="page-content">
     <div class="blog-grid">
-
-      <!-- Blog Post 1 -->
+      <article class="blog-card reveal">
+        <div class="blog-card-img">🏆</div>
+        <div class="blog-card-body">
+          <p class="blog-date">IN PROGRESS · 2026</p>
+          <h2 class="blog-card-title">Merancang Best In Battle: Platform Turnamen dari Nol</h2>
+          <p class="blog-card-excerpt">Proses merancang BIB — dari dokumen perencanaan, sistem role berbasis konteks, hingga dua mode turnamen (Bracket & Poin) yang fleksibel untuk berbagai jenis kompetisi.</p>
+        </div>
+      </article>
       <article class="blog-card reveal">
         <div class="blog-card-img">📱</div>
         <div class="blog-card-body">
           <p class="blog-date">COMING SOON</p>
           <h2 class="blog-card-title">Memulai Flutter: Pengalaman Pertamaku dengan Mobile Dev</h2>
-          <p class="blog-card-excerpt">
-            Cerita tentang bagaimana gue mulai belajar Flutter dari nol, apa yang susah,
-            apa yang bikin excited, dan tips buat yang baru mulai.
-          </p>
+          <p class="blog-card-excerpt">Cerita tentang bagaimana gue mulai belajar Flutter dari nol, apa yang susah, dan tips buat yang baru mulai.</p>
         </div>
       </article>
-
-      <!-- Blog Post 2 -->
       <article class="blog-card reveal">
         <div class="blog-card-img">🤝</div>
         <div class="blog-card-body">
           <p class="blog-date">COMING SOON</p>
-          <h2 class="blog-card-title">Kenapa Bergabung Organisasi UNITY Adalah Keputusan Terbaik</h2>
-          <p class="blog-card-excerpt">
-            Pengalaman menjadi bagian dari UNITY (Unsrat IT Community) — komunitas,
-            networking, dan belajar bareng orang-orang yang passionate di IT.
-          </p>
+          <h2 class="blog-card-title">Kenapa Bergabung UNITY Adalah Keputusan Terbaik</h2>
+          <p class="blog-card-excerpt">Pengalaman menjadi bagian dari UNITY — komunitas, networking, dan belajar bareng orang-orang yang passionate di IT.</p>
         </div>
       </article>
-
-      <!-- Blog Post 3 -->
       <article class="blog-card reveal">
         <div class="blog-card-img">🔁</div>
         <div class="blog-card-body">
           <p class="blog-date">COMING SOON</p>
           <h2 class="blog-card-title">Habit Tracker App: Dari Ide ke Kode</h2>
-          <p class="blog-card-excerpt">
-            Proses di balik pembuatan aplikasi Habit Tracker — mulai dari desain UI,
-            implementasi logika, sampai tantangan yang dihadapi.
-          </p>
+          <p class="blog-card-excerpt">Proses di balik pembuatan aplikasi Habit Tracker — mulai dari desain UI, implementasi logika, sampai tantangan yang dihadapi.</p>
         </div>
       </article>
-
-      <!-- Blog Post 4 -->
       <article class="blog-card reveal">
         <div class="blog-card-img">💡</div>
         <div class="blog-card-body">
           <p class="blog-date">COMING SOON</p>
           <h2 class="blog-card-title">Tips Belajar Programming Sambil Kuliah</h2>
-          <p class="blog-card-excerpt">
-            Cara gue manage waktu antara kuliah, organisasi, dan belajar coding
-            secara mandiri. Tidak ada formula ajaib, tapi ada beberapa prinsip yang membantu.
-          </p>
+          <p class="blog-card-excerpt">Cara gue manage waktu antara kuliah, organisasi, dan belajar coding secara mandiri.</p>
         </div>
       </article>
-
-      <!-- Blog Post 5 -->
       <article class="blog-card reveal">
         <div class="blog-card-img">🏫</div>
         <div class="blog-card-body">
           <p class="blog-date">COMING SOON</p>
           <h2 class="blog-card-title">Kehidupan Mahasiswa Informatika Unsrat</h2>
-          <p class="blog-card-excerpt">
-            Sekilas tentang kehidupan kuliah di Program Studi Informatika
-            Universitas Sam Ratulangi — mata kuliah, teman, dan pengalaman unik lainnya.
-          </p>
+          <p class="blog-card-excerpt">Sekilas tentang kehidupan kuliah di Program Studi Informatika Universitas Sam Ratulangi.</p>
         </div>
       </article>
-
-      <!-- Blog Post 6 -->
       <article class="blog-card reveal">
         <div class="blog-card-img">🚀</div>
         <div class="blog-card-body">
           <p class="blog-date">COMING SOON</p>
-          <h2 class="blog-card-title">Roadmap Mobile Dev 2025: Apa yang Sedang Gue Pelajari</h2>
-          <p class="blog-card-excerpt">
-            Rencana belajar gue untuk tahun ini — teknologi apa yang ingin dikuasai,
-            project apa yang ingin dibangun, dan target jangka panjang.
-          </p>
+          <h2 class="blog-card-title">Roadmap Mobile Dev 2025</h2>
+          <p class="blog-card-excerpt">Teknologi apa yang ingin dikuasai, project apa yang ingin dibangun, dan target jangka panjang.</p>
         </div>
       </article>
-
     </div>
-
-    <p class="reveal" style="text-align:center; color: var(--text-muted); font-family: var(--font-mono); font-size: 0.8rem; margin-top: 3rem; letter-spacing: 0.1em;">
-      // KONTEN BLOG AKAN SEGERA DIUPDATE
-    </p>
   </div>
 
   <footer>
-    <p>Built with HTML, CSS & JS &nbsp;·&nbsp; <span>Randi Franco Taroreh</span> &nbsp;·&nbsp; Universitas Sam Ratulangi</p>
+    <span>Randi Franco Taroreh · Universitas Sam Ratulangi</span>
+    <div class="footer-line"></div>
+    <span>Built with HTML, CSS & JS</span>
   </footer>
-
   <script src="../js/main.js"></script>
 </body>
 </html>
