--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,145 +5,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact — Randi Franco Taroreh</title>
   <link rel="stylesheet" href="../css/style.css"/>
-  <style>
-    .contact-section {
-      padding: 4rem 2rem 6rem;
-      max-width: 1100px;
-      margin: 0 auto;
-    }
-    .availability-badge {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-      background: rgba(34, 197, 94, 0.1);
-      border: 1px solid rgba(34, 197, 94, 0.3);
-      color: #22c55e;
-      padding: 0.4rem 1rem;
-      border-radius: 999px;
-      font-family: var(--font-mono);
-      font-size: 0.75rem;
-      letter-spacing: 0.1em;
-      margin-bottom: 1.5rem;
-    }
-    .availability-badge .dot {
-      width: 7px; height: 7px;
-      background: #22c55e;
-      border-radius: 50%;
-      animation: pulseDot 1.5s ease infinite;
-    }
-    @keyframes pulseDot {
-      0%, 100% { opacity: 1; box-shadow: 0 0 0 0 rgba(34,197,94,0.4); }
-      50% { opacity: 0.7; box-shadow: 0 0 0 4px rgba(34,197,94,0); }
-    }
-    .form-row {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 1rem;
-    }
-    @media (max-width: 640px) { .form-row { grid-template-columns: 1fr; } }
-  </style>
 </head>
 <body>
-
   <div class="cursor"></div>
   <div class="cursor-follower"></div>
 
   <nav class="navbar">
-    <div class="nav-logo"><span>~/</span>randi.dev</div>
+    <div class="nav-logo"><strong>RFT</strong>.dev</div>
     <ul class="nav-links">
       <li><a href="../index.html">Home</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="contact.html" class="active">Contact</a></li>
     </ul>
-    <div class="nav-hamburger">
-      <span></span><span></span><span></span>
-    </div>
+    <div class="nav-hamburger"><span></span><span></span><span></span></div>
   </nav>
 
   <div class="page-header">
-    <p class="section-tag" style="display:inline-block; margin-bottom:0.75rem;">// let's connect</p>
-    <h1 class="section-title" style="font-size: clamp(2rem, 4vw, 3rem);">Get in <span style="color:var(--accent)">Touch</span></h1>
-    <p style="color:var(--text-secondary); margin-top:1rem; font-size:0.9rem; font-family:var(--font-mono);">
-      Open untuk kolaborasi, diskusi, atau sekadar ngobrol soal tech
-    </p>
+    <div class="page-header-inner">
+      <div class="page-eyebrow">04 — Let's Connect</div>
+      <h1 class="page-title">Get in <span>Touch</span></h1>
+      <p class="page-subtitle">// Open untuk kolaborasi, diskusi, atau sekadar ngobrol soal tech</p>
+      <div class="page-divider"></div>
+    </div>
   </div>
 
-  <div class="contact-section">
+  <div class="page-content">
     <div class="contact-grid">
-
-      <!-- Left: Info -->
       <div class="reveal">
-        <div class="availability-badge">
-          <span class="dot"></span>
-          AVAILABLE FOR COLLABORATION
-        </div>
+        <div class="availability-badge"><span class="dot"></span>AVAILABLE FOR COLLABORATION</div>
         <h3>Halo, mari berkenalan!</h3>
-        <p>
-          Gue terbuka untuk diskusi soal mobile development, project kolaborasi,
-          atau sekadar sharing pengalaman belajar programming. Jangan ragu untuk reach out!
-        </p>
-
+        <p style="margin-bottom: 1rem;">Gue terbuka untuk diskusi soal mobile development, project kolaborasi, atau sekadar sharing pengalaman belajar programming.</p>
         <div class="contact-links">
-          <a class="contact-link" href="mailto:randitaroreh026@student.unsrat.ac.id">
-            <span class="icon">📧</span>
-            <span>randitaroreh026@student.unsrat.ac.id</span>
+          <a class="contact-link" href="mailto:randifrancotaroreh@gmail.com">
+            <span>📧</span><span>randifrancotaroreh@gmail.com</span>
           </a>
-          <a class="contact-link" href="https://github.com/R-Ndee" target="_blank" rel="noopener">
-            <span class="icon">💻</span>
-            <span>github.com/R-Ndee</span>
+          <a class="contact-link" href="https://github.com/" target="_blank" rel="noopener">
+            <span>💻</span><span>github.com/randi-franco</span>
           </a>
           <a class="contact-link" href="https://linkedin.com/" target="_blank" rel="noopener">
-            <span class="icon">🔗</span>
-            <span>linkedin.com/in/randi-Taroreh</span>
+            <span>🔗</span><span>linkedin.com/in/randi-franco</span>
           </a>
-          <a class="contact-link" href="https://www.instagram.com/r.ndeesu/" target="_blank" rel="noopener">
-            <span class="icon">📸</span>
-            <span>@r.ndeesu</span>
+          <a class="contact-link" href="https://instagram.com/" target="_blank" rel="noopener">
+            <span>📸</span><span>@randi.franco</span>
           </a>
-        </div>
-
-        <div style="margin-top: 2rem; padding: 1.25rem; background: var(--surface); border: 1px solid var(--border); border-radius: var(--radius);">
-          <p class="section-tag" style="margin-bottom: 0.5rem;">// location</p>
-          <p style="font-size: 0.9rem; color: var(--text-secondary);">🗺️ Manado, Sulawesi Utara</p>
-          <p style="font-size: 0.85rem; color: var(--text-muted); font-family: var(--font-mono); margin-top: 0.25rem;">Universitas Sam Ratulangi</p>
         </div>
       </div>
-
-      <!-- Right: Form -->
       <div class="reveal">
         <form id="contactForm">
           <div class="form-row">
             <div class="form-group">
               <label class="form-label" for="name">Name</label>
-              <input class="form-input" type="text" id="name" name="name" placeholder="Your name" required/>
+              <input class="form-input" type="text" id="name" placeholder="Your name" required/>
             </div>
             <div class="form-group">
               <label class="form-label" for="email">Email</label>
-              <input class="form-input" type="email" id="email" name="email" placeholder="your@email.com" required/>
+              <input class="form-input" type="email" id="email" placeholder="your@email.com" required/>
             </div>
           </div>
           <div class="form-group">
             <label class="form-label" for="subject">Subject</label>
-            <input class="form-input" type="text" id="subject" name="subject" placeholder="What's this about?" required/>
+            <input class="form-input" type="text" id="subject" placeholder="What's this about?" required/>
           </div>
           <div class="form-group">
             <label class="form-label" for="message">Message</label>
-            <textarea class="form-textarea" id="message" name="message" placeholder="Hey Randi, I wanted to..." required></textarea>
+            <textarea class="form-textarea" id="message" placeholder="Hey Randi..." required></textarea>
           </div>
-          <button type="submit" class="btn-primary" style="width: 100%; justify-content: center;">
-            Send Message →
-          </button>
+          <button type="submit" class="btn-primary" style="width:100%; justify-content:center;">Send Message →</button>
         </form>
       </div>
-
     </div>
   </div>
 
   <footer>
-    <p>Built with HTML, CSS & JS &nbsp;·&nbsp; <span>Randi Franco Taroreh</span> &nbsp;·&nbsp; Universitas Sam Ratulangi</p>
+    <span>Randi Franco Taroreh · Universitas Sam Ratulangi</span>
+    <div class="footer-line"></div>
+    <span>Built with HTML, CSS & JS</span>
   </footer>
-
   <script src="../js/main.js"></script>
 </body>
 </html>
