--- a/pages/contact.html
+++ b/pages/contact.html
@@ -43,8 +43,8 @@
           <a class="contact-link" href="https://github.com/" target="_blank" rel="noopener">
             <span>💻</span><span>github.com/randi-franco</span>
           </a>
-          <a class="contact-link" href="https://linkedin.com/" target="_blank" rel="noopener">
-            <span>🔗</span><span>linkedin.com/in/randi-franco</span>
+          <a class="contact-link" href="https://www.linkedin.com/in/randi-taroreh-9bb0883b4/overlay/contact-info/" target="_blank" rel="noopener">
+            <span>🔗</span><span>linkedin.com/in/randi-taroreh</span>
           </a>
           <a class="contact-link" href="https://instagram.com/" target="_blank" rel="noopener">
             <span>📸</span><span>@randi.franco</span>
